--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.9",
+    "expo-location": "^19.0.7",
     "expo-router": "~6.0.15",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0"
