--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.86.0",
-    "expo": "~54.0.25",
-    "expo-constants": "~18.0.10",
-    "expo-linking": "~8.0.9",
-    "expo-location": "^19.0.7",
-    "expo-router": "~6.0.15",
-    "expo-status-bar": "~3.0.8",
+    "expo": "~54.0.27",
+    "expo-constants": "~18.0.11",
+    "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
+    "expo-router": "~6.0.17",
+    "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-maps": "^1.20.1",
