--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@azesmway/react-native-unity": "^1.0.11",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.86.0",
     "expo": "~54.0.27",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.11",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
@@ -19,10 +22,14 @@
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "^1.26.20",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native/metro-config": "^0.82.1"
+  }
 }
