--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@azesmway/react-native-unity": "^1.0.11",
     "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@rnmapbox/maps": "^10.2.10",
     "@supabase/supabase-js": "^2.86.0",
     "expo": "~54.0.27",
     "expo-camera": "~17.0.10",
@@ -22,7 +23,6 @@
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-maps": "^1.26.20",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0"
