--- a/unity/android_export/gradle.properties
+++ b/unity/android_export/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx4096M
 org.gradle.parallel=true
-unityStreamingAssets=
+unityStreamingAssets=.xml, UnityServicesProjectConfiguration.json, aa/catalog.json, aa/settings.json
 unityTemplateVersion=7
 android.useAndroidX=true
 android.enableJetifier=true
