--- a/unity/android_export/launcher/build.gradle
+++ b/unity/android_export/launcher/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     }
 
 android {
-    namespace "com.DefaultCompany.ARMode"
+    namespace "com.kulturar.unity"
     ndkPath "C:/Program Files/Unity/Hub/Editor/2022.3.62f2/Editor/Data/PlaybackEngines/AndroidPlayer/NDK"
 
     compileSdkVersion 36
@@ -19,7 +19,7 @@ android {
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 36
-        applicationId 'com.DefaultCompany.ARMode'
+        applicationId 'com.kulturar.unity'
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
