Refactor code structure for improved readability and maintainability

--- a/app.json
+++ b/app.json
@@ -21,13 +21,20 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.ultra066.KulturAR"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "86f0c614-a7c2-4e2d-8097-c8dc445795c0"
+      }
+    }
   }
 }
