--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@rnmapbox/maps": "^10.2.10",
     "@supabase/supabase-js": "^2.86.0",
     "expo": "~54.0.27",
+    "expo-asset": "^12.0.12",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.11",
+    "expo-font": "^14.0.10",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
     "expo-router": "~6.0.17",
